--- a/front/package.json
+++ b/front/package.json
@@ -12,9 +12,11 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.3",
     "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
